Fix session prev url. Up z-index on nprogress.

--- a/app/assets/stylesheets/views/_nav.scss
+++ b/app/assets/stylesheets/views/_nav.scss
@@ -1,3 +1,8 @@
+#nprogress {
+  position: relative;
+  z-index: 1001;
+}
+
 .main-header--home {
   left: 0;
   position: absolute;
